--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-      <p>Relations to the Knowledge</p>
+      <p>Golf for sport</p>
     
 
     <script src="js/vendor/jquery.js"></script>
